Fucked up the alignment again may fix

--- a/style.css
+++ b/style.css
@@ -130,6 +130,6 @@ div.second {
   width:80%;
   height:400px;
   /* background-color: red; */
-  margin-top: 225px;
+  margin-top: 200px;
   float: left;
 }
